--- a/instiapp/pubspec.yaml
+++ b/instiapp/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_autolink_text: ^1.0.0+1
+  url_launcher: ^5.4.2
+  image_picker: ^0.6.4
+  photo_view: ^0.9.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -41,9 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
