--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   url_launcher: ^5.4.2
   image_picker: ^0.6.4
   photo_view: ^0.9.2
-
+  googleapis: ^0.54.0
+  googleapis_auth: ^0.2.11+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
