--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   url_launcher: ^5.4.2
   image_picker: ^0.6.4
   flutter_local_notifications: ^1.4.0
+  animator: ^1.0.0+5
   photo_view: ^0.9.2
   googleapis: ^0.54.0
   googleapis_auth: ^0.2.11+1
