--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'   
 }
 
 apply plugin: 'com.google.gms.google-services'
+
