--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # cloud_firestore: ^0.8.2+3
   firebase_auth: ^0.14.0+5
   google_sign_in: ^4.4.4
+  sqflite: ^1.3.0
   rxdart: ^0.24.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
