--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   firebase_analytics: ^5.0.2
   # cloud_firestore: ^0.8.2+3
   firebase_auth: ^0.14.0+5
+  path_provider: ^1.6.7
+
   google_sign_in: ^4.4.4
-  sqflite: ^1.3.0
+  csv: ^4.0.3
   rxdart: ^0.24.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
