added autorefresh on connectivity restore

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # cloud_firestore: ^0.8.2+3
   firebase_auth: ^0.14.0+5
   path_provider: ^1.6.7
+  flutter_offline: ^0.3.0
 
   google_sign_in: ^4.4.4
   csv: ^4.0.3
