--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   progressive_image: ^1.0.1
   carousel_slider: ^1.4.1
   flutter_spinkit: ^4.1.2+1
+  table_calendar: ^2.2.3
+  time_machine: ^0.9.12
+  timetable: ^0.1.1
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
@@ -42,7 +45,7 @@ dependencies:
 
   google_sign_in: ^4.4.4
   csv: ^4.0.3
-  rxdart: ^0.24.0
+  rxdart: ^0.23.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -50,6 +53,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  pedantic: 1.9.0
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -67,6 +74,8 @@ flutter:
   assets:
     - assets/images/
     - assets/
+    - packages/time_machine/data/cultures/cultures.bin
+    - packages/time_machine/data/tzdb/tzdb.bin
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
