--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   table_calendar: ^2.2.3
   time_machine: ^0.9.12
-  timetable: ^0.1.1
+  # timetable: ^0.1.1
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
@@ -53,7 +53,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+ 
 dependency_overrides:
   pedantic: 1.9.0
 
