--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   carousel_slider: ^1.4.1
   flutter_spinkit: ^4.1.2+1
   table_calendar: ^2.2.3
+  intl: ^0.16.1
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
