--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   table_calendar: ^2.2.3
   intl: ^0.16.1
+  device_apps: ^1.0.9
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
