--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,12 @@ dependencies:
     sdk: flutter
 
   flutter_autolink_text: ^1.0.0+1
-  url_launcher: ^5.4.2
+  url_launcher: ^5.4.7
   image_picker: ^0.6.4
   flutter_local_notifications: ^1.4.0
   animator: ^1.0.0+5
   photo_view: ^0.9.2
-  googleapis: ^0.54.0
+  googleapis: ^0.55.0
   flare_splash_screen: ^3.0.1
   googleapis_auth: ^0.2.11+1
   progressive_image: ^1.0.1
@@ -35,12 +35,14 @@ dependencies:
   table_calendar: ^2.2.3
   intl: ^0.16.1
   device_apps: ^1.0.9
+  google_maps_flutter: ^0.5.27+3
+  location: ^3.0.2  
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   # cloud_firestore: ^0.8.2+3
   firebase_auth: ^0.14.0+5
-  path_provider: ^1.6.7
+  path_provider: ^1.6.9
   flutter_offline: ^0.3.0
   google_sign_in: ^4.4.4
   csv: ^4.0.3
