--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   table_calendar: ^2.2.3
   intl: ^0.16.1
   device_apps: ^1.0.9
-  google_maps_flutter: ^0.5.27+3
+  # google_maps_flutter: ^0.5.27+3
   location: ^3.0.2  
 
   firebase_core: ^0.4.0+9
