--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   intl: ^0.16.1
   device_apps: ^1.0.9
   google_maps_flutter: ^0.5.27+3
-  location: ^3.0.2  
+  location: ^3.0.2
+  file_picker: ^1.9.0+1
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
