--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   location: ^3.0.2
   file_picker: ^1.9.0+1
   cached_network_image: ^2.2.0+1
+  downloads_path_provider: ^0.1.0
+  permission_handler: ^5.0.1
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
