--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,12 +62,16 @@ android {
     }
     buildTypes {
         release {
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
 
             //TOGGLE COMMENTS ON NEXT FEW LINES 
-            signingConfig signingConfigs.debug
-            // signingConfig signingConfigs.release
+            //signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -82,4 +86,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-v4:27.1.0'
+    }}
 
