--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=instiapp
-keyPassword=instiapp
-keyAlias=key
-storeFile=E:/dev/flutter/instiapp/key.jks
+storePassword=gnius123
+keyPassword=gnius123
+keyAlias=key0
+storeFile=D:/Gaurav/Github_copy/Instiapp_Beta/IITGN-Institute-App/key.jks
