--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,12 @@ dependencies:
   #(beta)table_calendar: ^2.2.3
   
   intl: ^0.16.1
-  #(beta)device_apps: ^1.0.9
+  device_apps: ^1.0.9
   google_maps_flutter: ^0.5.27+3
   location: ^3.0.2
-  #(beta)file_picker: ^1.9.0+1
+  file_picker: ^1.9.0+1
   cached_network_image: ^2.2.0+1
-  #(beta)downloads_path_provider: ^0.1.0
+  downloads_path_provider: ^0.1.0
   permission_handler: ^5.0.1
 
   firebase_core: ^0.5.3
