--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   animator: ^1.0.0+5
   photo_view: ^0.9.2
   googleapis: ^0.55.0
+  carousel_slider: ^2.3.1
   flutter_svg: ^0.19.0
   googleapis_auth: ^0.2.11+1
   progressive_image: ^1.0.1 
