preparing for release

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=gnius123
 keyPassword=gnius123
 keyAlias=key0
-storeFile=D:/Gaurav/Github_copy/Instiapp_Dev/IITGN-Institute-App/key.jks
+storeFile=E:\dev\flutter\instiapp\key.jks
