--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   rxdart: ^0.23.1
   transformer_page_view: ^0.1.6
   shared_preferences: ^0.5.7+3
+  flutter_emoji: ^2.2.1+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
