--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,13 +53,19 @@ dependencies:
   google_sign_in: "^4.5.1"
 
 
-  path_provider: ^1.6.9
   flutter_offline: ^0.3.0
   csv: ^4.0.3
   rxdart: ^0.23.1
   transformer_page_view: ^0.1.6
   shared_preferences: ^0.5.7+3
   flutter_emoji: ^2.2.1+1
+
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
+  path_provider: ^1.6.9
+
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -67,7 +73,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  
+  hive_generator: ^0.7.0+2
+  build_runner: ^1.8.0
   flutter_launcher_icons: ^0.7.5
 
 flutter_icons:
