--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^4.3.2+3
   flutter_svg: ^0.19.0
   googleapis_auth: ^0.2.11+1
+  firebase_messaging: ^7.0.3
   progressive_image: ^1.0.1 
   color_convert: ^1.0.2
   #(beta)flutter_spinkit: ^4.1.2+1
