--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -21,7 +21,7 @@
       "login": "Gaurav7214",
       "name": "Gaurav Viramgami",
       "avatar_url": "https://avatars2.githubusercontent.com/u/58519896?v=4",
-      "profile": "https://github.com/Gaurav7214",
+      "profile": "https://github.com/GauravViramgami",
       "contributions": [
         "code",
         "ideas",
