--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+9
+version: 1.0.2+10
 
 environment: 
   sdk: ">=2.3.0 <3.0.0"
@@ -33,6 +33,7 @@ dependencies:
   flutter_svg: ^0.19.0
   googleapis_auth: ^0.2.11+1
   firebase_messaging: ^7.0.3
+  font_awesome_flutter: ^8.11.0
   progressive_image: ^1.0.1 
   color_convert: ^1.0.2
   #(beta)flutter_spinkit: ^4.1.2+1
